--- a/application/utils/consts.yaml
+++ b/application/utils/consts.yaml
@@ -3,9 +3,28 @@ apple: apple
 restart_count_threshold: 3
 restart_time_threshold: 600
 
-log_dir: "/home/mic-730ai/Desktop/counter_logs/"
+log_parent_dir: "/home/mic-730ai/Desktop/logs"
+
+log_dir: "counter_logs"
 log_name: "log"
 log_extension: "log"
+tabular_log_ext: "csv"
+
+syslog_orig_path: "/var/log/syslog"
+syslog_dir: "syslog"
+syslog: "syslog"
+
+mtu_traffic_sleep_duration: 1
+NIC: "NIC"
+bytes_sent: "bytes_sent"
+bytes_recv: "bytes_recv"
+mtu_sample_timestamp: "mtu_sample_timestamp"
+mtu_dir: "MTU"
+mtu: "mtu"
+
+jtop_dir: "jtop"
+jtop: "jtop"
+
 global_polygon: "global"
 startup_script: "/home/mic-730ai/Desktop/startup_counter.sh"
 
