--- a/vision/pipelines/config/pipeline_config.yaml
+++ b/vision/pipelines/config/pipeline_config.yaml
@@ -30,10 +30,24 @@ tracker:
   minimal_max_distance: 10
   major: 1.5 #3
   minor: 1 #2.5
-  max_losses: 5  # 10
-  score_weights: [0.25, 1.0, 0.25, 0.0]  # [0.25, 1.0, 0.25, 1]
+  close_frame: 0.9
+  ranges:
+    close:
+      dist: 1.2
+      major: 2.2 #1.5 #2
+      minor: 1.2 #0.8 #1.2
+    far:
+      dist: 3.2
+      major: 1.2 # 1.1
+      minor: 0.4 # 0.65
+    mid:
+      dist: 2 # not in use
+      major: 1.5 #1.5
+      minor: 0.8 #0.8
+  max_losses: 3  # 10
+  score_weights: [0.25, 1.0, 0.25, 0.75]  # [0.25, 1.0, 0.25, 1]
   match_type:  inter #center #
-  det_area: 0.7
+  det_area: 1
   translation_size: 640
   compile_data_path: /home/fruitspec-lab-3/FruitSpec/Code/Matan/tracker_init.pkl
   debug: false
