--- a/vision/pipelines/config/pipeline_config.yaml
+++ b/vision/pipelines/config/pipeline_config.yaml
@@ -13,6 +13,7 @@ device: cuda
 
 input_size: [1024, 1024]
 batch_size: 4
+len_size: 83
 
 detector:
   confidence: 0.381
@@ -55,6 +56,11 @@ sensor_aligner:
   sy: 0.6133919843597263 # 0.6133919843597263
   roix: 970 #970 #930 #937
   roiy: 1255
+  roiy_83: 1870
+  roix_83: 1000
+  sx_83: 1
+  sy_83: 1
+  zed_roi_params_83: {y_s: 0, y_e: 1920, x_s: 0, x_e: 1080} # jai search region in zed
   debug:
     preprocess: false
     keypoints: false
