--- a/application/utils/config.yaml
+++ b/application/utils/config.yaml
@@ -4,6 +4,7 @@ autonomous_acquisition: true
 customer_code: "MOTCHA"
 crop: citrus
 collect_data: true
+use_cuda_streams: True
 debug:
   # if 'is_active' is set to 'False' then all other values are automatically set to 'False' as well.
   is_active: True
