--- a/application/utils/config.yaml
+++ b/application/utils/config.yaml
@@ -6,7 +6,7 @@ crop: citrus
 collect_data: true
 debug:
   # if 'is_active' is set to 'False' then all other values are automatically set to 'False' as well.
-  is_active: True
+  is_active: False
   crash_syslog: True
   mtu_log: True
   jtop_log: True
