adding support for including tomato color in track.csv relevent debug functions for alignment with dets and colors
sensors_alignment:
apply_zed_shift - config flag

tomato_rgb_adt:
full pipe for extracting size, color from zed while detecting on jai
still need to finetune alignment paramaters

--- a/vision/pipelines/config/dual_runtime_config.yaml
+++ b/vision/pipelines/config/dual_runtime_config.yaml
@@ -52,6 +52,7 @@ debug:
   trees: false
   features: false
   align_graph: false
+  alignment: true
   run_type: RGB_siftv1_kp_equalize # align graph naming
 
 adt_debugger:
