--- a/vision/feature_extractor/feature_extractor_config.yaml
+++ b/vision/feature_extractor/feature_extractor_config.yaml
@@ -2,7 +2,7 @@ output_folder: /media/fruitspec-lab/cam175/customers_new/MOTCHA/SHAMVATI/060723/
 debug_folder: /media/fruitspec-lab/easystore/testing_playground
 
 rotate: false
-max_z: 5 # max depeth for fruit counting
+max_z: 2 # max depeth for fruit counting
 max_x_pix: 512 # max size for x axis default 512 (1152 max size)
 max_y_pix: 682 # max size for y axis default 682 (1536 max size)
 direction: "right" # where do new frames come from
@@ -32,8 +32,8 @@ min_dets_3d_init: 0.1 # chosen first frame for 3d space must have n_trackes >  q
 max_depth_change: 5 # filters fruit with higher depth change between tracklets, 0 means no filtering
 
 # tracker related params
-#tracker_format: [6, 0, 1, 2, 3, 9, 8, 10, 11, 12] # track_id, x1,y1,x2,y2, pc_x, pc_y, pc_z, width, height
-tracker_format: [6, 0, 1, 2, 3, 8] # track_id, x1,y1,x2,y2,pc_z this should be on in MKV mode
+tracker_format: [6, 0, 1, 2, 3, 9, 8, 10, 11, 12] # track_id, x1,y1,x2,y2, pc_x, pc_y, pc_z, width, height
+#tracker_format: [6, 0, 1, 2, 3, 8] # track_id, x1,y1,x2,y2,pc_z this should be on in MKV mode
 
 # translation related params
 dets_only: false # whether to use only the detections for the translation between images or the full image
