--- a/vision/pipelines/config/pipeline_config.yaml
+++ b/vision/pipelines/config/pipeline_config.yaml
@@ -57,11 +57,11 @@ sensor_aligner:
   sy: 0.6133919843597263 # 0.6133919843597263
   roix: 970 #970 #930 #937
   roiy: 1255
-  roiy_83: 1750
-  roix_83: 1000
-  sx_83: 0.897 #0.897
-  sy_83: 0.896 #0.896
-  zed_roi_params_83: {y_s: 50, y_e: 1920, x_s: 0, x_e: 1080} # jai search region in zed #(143, 90, 0.897, 0.896)
+  roiy_83: 1800 #1603
+  roix_83: 1000 #917
+  sx_83: 1.1776077 #0.897
+  sy_83: 1.1976394 #0.896
+  zed_roi_params_83: {y_s: 0, y_e: 1920, x_s: 0, x_e: 1080} # {y_s: 50, y_e: 1920, x_s: 0, x_e: 1080} # jai search region in zed #(143, 90, 0.897, 0.896)
   apply_zed_shift: false
   debug:
     preprocess: false
