--- a/vision/pipelines/config/dual_runtime_config.yaml
+++ b/vision/pipelines/config/dual_runtime_config.yaml
@@ -42,7 +42,7 @@ rgb_jai:
 frame_size: [2048, 1536]
 
 debug:
-  tracker_windows: false
+  tracker_windows: true
   tracker_results: true
   det_results: true
   raw_frame: false
@@ -52,9 +52,9 @@ debug:
   trees: false
   features: false
   align_graph: false
-  alignment: true
+  alignment: false
   run_type: RGB_siftv1_kp_equalize # align graph naming
-  raw_frame_zed: true
+  raw_frame_zed: false
 
 adt_debugger:
   scan_type: "multi_scans"
