--- a/vision/pipelines/config/pipeline_config.yaml
+++ b/vision/pipelines/config/pipeline_config.yaml
@@ -83,7 +83,7 @@ sensor_aligner:
     homography: false
 
 frame_loader:
-  mode: sync_svo # sync_mkv, async,  sync_svo
+  mode: sync_mkv # sync_mkv, async,  sync_svo
 
 result_collector:
   mode: pc_dims_tomato # options: "", depth, pc, pc_dims; suffix tomato is necessery in tomato mode
