--- a/vision/pipelines/config/dual_runtime_config.yaml
+++ b/vision/pipelines/config/dual_runtime_config.yaml
@@ -40,12 +40,13 @@ rgb_jai:
 frame_size: [2048, 1536]
 
 debug:
-  tracker_windows: false
-  tracker_results: false
-  det_results: false
+  tracker_windows: true
+  tracker_results: true
+  det_results: true
   raw_frame: false
   depth: false
   tracker: None
+  clusters : false
   trees: false
   features: false
   align_graph: true
