--- a/vision/pipelines/config/pipeline_config_grapes_prod.yaml
+++ b/vision/pipelines/config/pipeline_config_grapes_prod.yaml
@@ -29,8 +29,8 @@ classes:
 
 tracker:
   minimal_max_distance: 10
-  major: 1.5 #1.8
-  minor: 1.2 #1
+  major: 1.8 #1.8
+  minor: 1. #1
   close_frame: 0.9
   max_losses: 3  # 10
   score_weights: [0.25, 1.0, 0.25, 0.0]  # [0.25, 1.0, 0.25, 1]
