--- a/vision/pipelines/config/pipeline_config_grapes_prod.yaml
+++ b/vision/pipelines/config/pipeline_config_grapes_prod.yaml
@@ -16,7 +16,7 @@ batch_size: 4
 detector:
   detector_type: yolox # implemented: yolox, yolov8
   confidence: 0.4
-  nms: 0.45
+  nms: 0.05
   num_of_classes: 1
   max_detections: 300
   fp16: true
@@ -24,13 +24,13 @@ detector:
   trt: false
 
 classes:
-  full: 0
-  partial: 1
+  grapes: 0
+
 
 tracker:
   minimal_max_distance: 10
-  major: 1.8 #1.8
-  minor: 1. #1
+  major: 1.5 #1.8
+  minor: 1.2 #1
   close_frame: 0.9
   max_losses: 3  # 10
   score_weights: [0.25, 1.0, 0.25, 0.0]  # [0.25, 1.0, 0.25, 1]
