--- a/vision/pipelines/config/dual_runtime_config.yaml
+++ b/vision/pipelines/config/dual_runtime_config.yaml
@@ -40,9 +40,9 @@ rgb_jai:
 frame_size: [2048, 1536]
 
 debug:
-  tracker_windows: true
-  tracker_results: true
-  det_results: true
+  tracker_windows: false
+  tracker_results: false
+  det_results: false
   raw_frame: false
   depth: false
   tracker: None
