--- a/vision/pipelines/config/dual_runtime_config.yaml
+++ b/vision/pipelines/config/dual_runtime_config.yaml
@@ -42,12 +42,12 @@ frame_size: [2048, 1536]
 
 debug:
   tracker_windows: false
-  tracker_results: false
+  tracker_results: true
   det_results: false
   raw_frame: false
   depth: false
   clusters: true
-  colors: false
+  colors: true
   tracker: None
   trees: false
   features: false
